--- a/copulas_use_case_fake_data.ipynb
+++ b/copulas_use_case_fake_data.ipynb
@@ -97,7 +97,7 @@
    "id": "fleet-detective",
    "metadata": {},
    "source": [
-    "We create two arrays of observations based on the uniform distributions derived from norm_1 and norm_2. In other words, we rescale these observations from normal distributions to values between 0 and 1, in a way that respects the initial distribution (we don't divide all the observations by len(observations) but we use the cumulative distribution function."
+    "We create two arrays of observations based on the uniform distributions derived from norm_1 and norm_2. In other words, we rescale these observations from normal distributions to values between 0 and 1, in a way that respects the initial distribution (we don't divide all the observations by len(observations) but we use the cumulative distribution function instead)."
    ]
   },
   {
